--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Hey! I'm Alex. Coding has changed my world. It's not just about apps. Learning to code gave me problem-solving skills and a way to communicate with others on a technical level. I can also develop websites and use my coding skills to get a better job. And I learned it all at SoloLearn where they build your self-esteem and keep you motivated. Join me in this rewarding journey. You'll have fun, get help, and learn along the way! </p>
     <hr>
     <p class="quote">"Declare variables, not war"</p>
-    <div class="me"><a href="https://www.behance.net/madiyar" target="_blank"><img src="img/IMG_2678.png" alt="me" ></a></div>
+    <div class="me"><a href="https://www.behance.net/madiyar" target="_blank"></a></div>
 
     <!---My skills-->
 
